# kubernetes-practice-files

./: README.md  yeah.py
build-platform/: hue-learn-deployment.yaml  hue-reminder-deployment.yaml  hue-reminder-service.yaml
build-platform/base/: pod-hue-learner.yaml
custom-resoursce/: candy-crd.yaml  candy-with-flavor-crd.yaml  candy-with-unknown-fields-crd.yaml  chocolate.yaml  gummy-bear.yaml
deploying-updating/: bash-loop-deployment.yaml  compute-quota.yaml  hue-horizontal-pod-autoscaler.yaml  limits.yaml  nginx-deployment.yaml  nginx-hpa.yaml  object-compute-quota.yaml
helm/: prometheus.v1.json
helm/cool-chart/: values.yaml
helm/cool-chart/templates/: deployment.yaml  hpa.yaml  serviceaccount.yaml
helm/food-chart/: values.yaml
helm/food-chart/templates/: config-map.yaml
hue-platform/: parallel-job.yaml
hue-platform/overlays/staging/: kustomization.yaml
kubernetes-api/: README.md  pyproject.toml
kubernetes-api/kubernetes_api/: create_nginx_deployment.py  k.py  nginx-pod.json  watch_demo.py
networking/: load-balancer.yaml  pod-with-dns.yaml
scheduling/: hue-reminders-deployment-with-spread-contraintns.yaml  trouble-shooter.yaml
secrets/: container.yaml  hush-hush.yaml
service-account/: secret-account-service.yaml
stateful/: cassandra-statefulset.yaml  nginx-stateful-set.yaml  pod-with-db.yaml
storage/: hue-host-path.yaml  hue-persistent-volumen.yaml  local-persistent-volume-claim.yaml  persistent-volumen.yaml  pod-with-local-claim.yaml  shell-pod.yaml  some-persistent-volumen-claim.yaml
